# ohno

./: .gitignore  ARCHITECTURE.md  HANDOFF.md  LICENSE  Makefile  README.md  kanban.py  task-panel.html
.github/workflows/: ci.yml  release.yml
ohno-cli/: README.md  pyproject.toml
ohno-cli/src/ohno_cli/: __init__.py  _template.py  main.py
ohno-mcp/: README.md  pyproject.toml
ohno-mcp/src/ohno_mcp/: __init__.py  db.py  server.py
