[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ohno-cli"
version = "1.1.0"
description = "Visual kanban board for Ohno task management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "srstomp" }
]
keywords = ["kanban", "tasks", "cli", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

# Zero dependencies - pure stdlib
dependencies = []

[project.scripts]
ohno = "ohno_cli.main:main"

[project.urls]
Homepage = "https://github.com/srstomp/ohno"
Repository = "https://github.com/srstomp/ohno"
