[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ohno-cli"
version = "1.2.0"
description = "Task management CLI for AI agents and humans with visual kanban board"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "srstomp" }
]
keywords = ["kanban", "tasks", "cli", "visualization", "ai-agents", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

# Core visualization is zero-dependency (pure stdlib)
# Task management commands require ohno-mcp
dependencies = []

[project.optional-dependencies]
# Install with: pip install ohno-cli[tasks]
tasks = [
    "ohno-mcp @ git+https://github.com/srstomp/ohno.git#subdirectory=ohno-mcp",
]
# Full install with all features
full = [
    "ohno-mcp @ git+https://github.com/srstomp/ohno.git#subdirectory=ohno-mcp",
]

[project.scripts]
ohno = "ohno_cli.main:main"

[project.urls]
Homepage = "https://github.com/srstomp/ohno"
Repository = "https://github.com/srstomp/ohno"
