[project]
name = "ohno-mcp"
version = "0.1.0"
description = "MCP server for task management - enables AI agents to query and update project tasks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["mcp", "model-context-protocol", "task-management", "ai-agents", "kanban"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
ohno-mcp = "ohno_mcp.server:main"

[project.urls]
Homepage = "https://github.com/srstomp/ohno"
Repository = "https://github.com/srstomp/ohno"
Issues = "https://github.com/srstomp/ohno/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ohno_mcp"]
